more UI work, done with tabbed view.

--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="MUSIC_ACTION_STOP">MUSIC_ACTION_STOP</string>
     <string name="MUSIC_ACTION_PAUSE">MUSIC_ACTION_PAUSE</string>
     <string name="MUSIC_PLAY_PAUSE_TOGGLE">MUSIC_PLAY_PAUSE_TOGGLE</string>
-    <string name="BROADCAST_PIVATE">AndroidApp.IN_APP_BROADCAST</string>
+    <string name="BROADCAST_PRIVATE">AndroidApp.IN_APP_BROADCAST</string>
 </resources>
