--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="MUSIC_ACTION_PAUSE">MUSIC_ACTION_PAUSE</string>
     <string name="MUSIC_PLAY_PAUSE_TOGGLE">MUSIC_PLAY_PAUSE_TOGGLE</string>
     <string name="BROADCAST_PRIVATE">AndroidApp.IN_APP_BROADCAST</string>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
