working on add station sql calls.

--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="action_import_list">import_list</string>
     <string name="action_export_list">export_list</string>
     <string name="LIB_FRAG_TAG">LIBRARY_FRAGMENT_TAG</string>
-
+    <string name="PlayListViewPos">PLAYLIST_LISTVIEW_POSITION</string>
 
 
 
