--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">Internet Radio Xtreamer</string>
+    <string name="MUSIC_ACTION_PLAY_URL">MUSIC_ACTION_PLAY_WITH_URL</string>
     <string name="MUSIC_ACTION_CREATE">MUSIC_ACTION_CREATE</string>
     <string name="MUSIC_ACTION_PLAY">MUSIC_ACTION_PLAY</string>
     <string name="MUSIC_ACTION_STOP">MUSIC_ACTION_STOP</string>
     <string name="MUSIC_ACTION_PAUSE">MUSIC_ACTION_PAUSE</string>
     <string name="MUSIC_PLAY_PAUSE_TOGGLE">MUSIC_PLAY_PAUSE_TOGGLE</string>
+    <string name="MUSIC_URL_TO_PLAY">STATION_URL_TO_PLAY</string>
     <string name="BROADCAST_PRIVATE">AndroidApp.IN_APP_BROADCAST</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
