--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Internet Radio Xtreamer</string>
+    <string name="app_name_no_space">Internet_Radio_Xtreamer</string>
     <string name="MUSIC_ACTION_PLAY_URL">MUSIC_ACTION_PLAY_WITH_URL</string>
     <string name="MUSIC_ACTION_CREATE">MUSIC_ACTION_CREATE</string>
     <string name="MUSIC_ACTION_PLAY">MUSIC_ACTION_PLAY</string>
@@ -18,8 +19,12 @@
     <string name="action_add_station">add_station</string>
     <string name="action_import_list">import_list</string>
     <string name="action_export_list">export_list</string>
-    <string name="LIB_FRAG_TAG">LIBRARY_FRAGMENT_TAG</string>
+    <string name="action_export_database">export_database</string>
+    <string name="LibraryFragmentTag">LIBRARY_FRAGMENT_TAG</string>
+    <string name="StationListFragmentTag">STATION_LIST_FRAGMENT_TAG</string>
     <string name="PlayListViewPos">PLAYLIST_LISTVIEW_POSITION</string>
     <string name="StationListViewPos">STATION_LISTVIEW_POSITION</string>
     <string name="ParentPlaylistID">PARENT_PLAYLIST_ID</string>
+
+    <string name="DATABASE_NAME">RecordSchema.db</string>
 </resources>
