SharePreferences saving player fragment state ( titles + url);

--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -27,4 +27,9 @@
     <string name="ParentPlaylistID">PARENT_PLAYLIST_ID</string>
 
     <string name="DATABASE_NAME">RecordSchema.db</string>
+    <string name="SETTING_PREFERENCES">SHARED_PREFERENCES_SETTINGS</string>
+    <string name="SETTING_LAST_STATION_TITLE">SHARED_PREFERENCES_SETTINGS_LAST_STATION_TITLE</string>
+    <string name="SETTING_LAST_PLAYLIST_TITLE">SHARED_PREFERENCES_SETTINGS_LAST_PLAYLIST_TITLE</string>
+    <string name="SETTING_LAST_STATION_URL">SHARED_PREFERENCES_SETTINGS_LAST_STATION_URL</string>
+
 </resources>
