working on contextmenulistener and shuffle function when change to song in another playlist.

--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="SETTING_LAST_STATION_TITLE">SHARED_PREFERENCES_SETTINGS_LAST_STATION_TITLE</string>
     <string name="SETTING_LAST_PLAYLIST_TITLE">SHARED_PREFERENCES_SETTINGS_LAST_PLAYLIST_TITLE</string>
     <string name="SETTING_LAST_STATION_URL">SHARED_PREFERENCES_SETTINGS_LAST_STATION_URL</string>
+    <string name="SETTING_IS_SHUFFLE">SHARED_PREFERENCES_SETTINGS_IS_SHUFFLE</string>
 
 </resources>
