--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="MUSIC_ACTION_CREATE">MUSIC_ACTION_CREATE</string>
     <string name="MUSIC_ACTION_PLAY">MUSIC_ACTION_PLAY</string>
     <string name="MUSIC_ACTION_STOP">MUSIC_ACTION_STOP</string>
+    <string name="MUSIC_ACTION_RESET">MUSIC_ACTION_RESET</string>
+
     <string name="MUSIC_ACTION_PAUSE">MUSIC_ACTION_PAUSE</string>
     <string name="MUSIC_PLAY_PAUSE_TOGGLE">MUSIC_PLAY_PAUSE_TOGGLE</string>
     <string name="MUSIC_URL_TO_PLAY">STATION_URL_TO_PLAY</string>
