fixed play progress bar display issue.

--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="SETTING_LAST_PLAYLIST_TITLE">SHARED_PREFERENCES_SETTINGS_LAST_PLAYLIST_TITLE</string>
     <string name="SETTING_LAST_STATION_URL">SHARED_PREFERENCES_SETTINGS_LAST_STATION_URL</string>
     <string name="SETTING_IS_SHUFFLE">SHARED_PREFERENCES_SETTINGS_IS_SHUFFLE</string>
+    <string name="SETTING_IS_REPEAT"> SHARED_PREFERENCES_SETTINGS_IS_REPEAT</string>
     <string name="SETTING_USE_PLAY_PROGRESS_BAR">SHARED_PREFERENCES_SETTING_USE_PLAY_PROGRESS_BAR</string>
     <string name="ROOT_DIRECTORY_NAME">XStreamer</string>
     <string name="SAVE_DIRECTORY_NAME">XstreamerAudios</string>
