--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="SETTING_IS_REPEAT"> SHARED_PREFERENCES_SETTINGS_IS_REPEAT</string>
     <string name="SETTING_USE_PLAY_PROGRESS">SHARED_PREFERENCES_SETTING_USE_PLAY_PROGRESS_BAR</string>
     <string name="SETTING_USE_WIFI_ONLY">SHARED_PREFERENCES_SETTING_USE_WIFI_ONLY</string>
+    <string name="SETTING_MAX_PLAY_PROGRESS_SECONDS">SHARED_PREFERENCES_SETTING_MAX_PLAY_PROGRESS_SECONDS</string>
     <string name="ROOT_DIRECTORY_NAME">XStreamer</string>
     <string name="SAVE_DIRECTORY_NAME">XstreamerAudios</string>
 
