--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Internet Radio Xtreamer</string>
-    <string name="app_name_no_space">Internet_Radio_Xtreamer</string>
+    <string name="app_name">DownWave Xtreamer</string>
+    <string name="app_name_no_space">DownWave_Xtreamer</string>
     <string name="MUSIC_ACTION_PLAY_URL">MUSIC_ACTION_PLAY_WITH_URL</string>
     <string name="MUSIC_ACTION_CREATE">MUSIC_ACTION_CREATE</string>
     <string name="MUSIC_ACTION_PLAY">MUSIC_ACTION_PLAY</string>
@@ -40,12 +40,11 @@
     <string name="SETTING_MAX_PLAY_PROGRESS_SECONDS">SHARED_PREFERENCES_SETTING_MAX_PLAY_PROGRESS_SECONDS</string>
     <string name="SETTING_MAX_FILE_SIZE">SHARED_PREFERENCES_SETTING_MAX_FILE_SIZE</string>
 
-    <string name="ROOT_DIRECTORY_NAME">XStreamer</string>
-    <string name="SAVE_DIRECTORY_NAME">XstreamerAudios</string>
+    <string name="ROOT_DIRECTORY_NAME">DownWaveXtreamer</string>
+    <string name="SAVE_DIRECTORY_NAME">DownWaveXtreamerAudios</string>
 
 
     <string name="WIFI_WARNING_TEXT">WIFI ONLY MODE, CHANGE SETTINGS TO USE MOBILE DATA</string>
-
 
     <string-array name="file_size_unit_array">
         <item>KiloBytes</item>
