--- a/cs499mobileapp/app/src/main/res/values/strings.xml
+++ b/cs499mobileapp/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
         <item>MegaBytes</item>
     </string-array>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
